[package]
name = "timely-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Timely API CLI, MCP server, and local Memory reader"

[lib]
name = "timely_cli"
path = "src/lib.rs"

[[bin]]
name = "timely"
path = "src/main.rs"

[dependencies]
timely_lib = { path = "../timely_lib" }
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
getrandom = "0.4"
clap_complete = "4.5"
clap_mangen = "0.3"
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tiny_http = "0.12"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
