[package]
name = "timely_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Timely API client library"

[build-dependencies]
heck = "0.5"
serde_json = "1.0"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = "0.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
